crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R2_minus_R1.stderr
error[E0277]: the trait bound `typenum::uint::UTerm: typenum::private::PrivateSub<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>` is not satisfied
 --> tests/ui/generated/should_fail/test__typenum_ladder__R2_minus_R1.rs:5:22
  |
5 |    let _ = R2::new() - R1::new();
  |                      ^ the trait `typenum::private::PrivateSub<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>` is not implemented for `typenum::uint::UTerm`, which is required by `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>: Sub<_>`
  |
  = help: the following other types implement trait `typenum::private::PrivateSub<Rhs>`:
            <typenum::uint::UInt<Ul, typenum::bit::B0> as typenum::private::PrivateSub<typenum::uint::UInt<Ur, typenum::bit::B0>>>
            <typenum::uint::UInt<Ul, typenum::bit::B0> as typenum::private::PrivateSub<typenum::uint::UInt<Ur, typenum::bit::B1>>>
            <typenum::uint::UInt<Ul, typenum::bit::B1> as typenum::private::PrivateSub<typenum::uint::UInt<Ur, typenum::bit::B0>>>
            <typenum::uint::UInt<Ul, typenum::bit::B1> as typenum::private::PrivateSub<typenum::uint::UInt<Ur, typenum::bit::B1>>>
  = note: required for `typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>` to implement `typenum::private::PrivateSub<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>`
  = note: required for `typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>` to implement `Sub<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>`
  = note: 1 redundant requirement hidden
  = note: required for `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>` to implement `Sub<ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>>`
